[project]
name = "tinyros-stereo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "gradio>=5.35.0",
    "imageio>=2.37.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "widgetsnbextension>=4.0.14",
]
